# debian-xcb-util

./: ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  configure  configure.ac
debian/: changelog  control  rules
src/: Makefile.am  Makefile.in  atoms.c  atoms.gperf.m4  xcb_atom.h.m4
